--- a/src/data/fixtures/fixtures.yml
+++ b/src/data/fixtures/fixtures.yml
@@ -20,6 +20,11 @@ Artist:
         <li><a href="https://www.facebook.com/pages/Ben-et-B%C3%A9n%C3%A9/20216379469">facebook</a></li>
         <li><a href="http://www.myspace.com/benetbene">Myspace</a></li>
       <ul>
+    links_carousel: |
+      http://vimeo.com/channels/dahearditrecords/5998420
+      http://vimeo.com/channels/dahearditrecords/5998150
+      http://vimeo.com/channels/dahearditrecords/5998017
+      http://vimeo.com/channels/dahearditrecords/5998677
     Translation:
       fr:
         presentation: |
