--- a/src/data/fixtures/fixtures.yml
+++ b/src/data/fixtures/fixtures.yml
@@ -856,7 +856,7 @@ Content:
           Momo Seb,
           <a href="http://valkiri.incongru.org">Valkiri</a>,
           <a href="http://www.mobyone.net">Mobyone</a>, 
-          <a href="http://www.ilbm.info">Ilbm</a>
+          <a href="http://www.ilbm.info">Ilbm</a>,
           <a href="http://pastis-hosting.net">Pastis Hosting</a>, 
           Ptite Gonze,
           <a href="http://puyopuyo.lautre.net/">Puyo Puyo</a>,
