new links style

--- a/src/data/fixtures/fixtures.yml
+++ b/src/data/fixtures/fixtures.yml
@@ -795,7 +795,7 @@ Content:
           <a href="http://www.myspace.com/astroboiler/">Astroboiler</a>,
           <a href="http://www.benetbene.net">Ben Et Béné</a>,
           <a href="http://www.buskerdroid.com/">Buskerdroid</a>,
-          <a href="">Bimbo Tower</a>,
+          <a href="http://bimbo.tower.free.fr/">Bimbo Tower</a>,
           <a href="http://computertruck.parishq.net">Computer Truck</a>,
           <a href="http://www.constructions-incongrues.net/">Constructions Incongrues</a>
           Danielle Josset,
@@ -807,9 +807,9 @@ Content:
           <a href="http://cochise.canalblog.com/">Jacques Cochise</a>,
           <a href="http://www.julienbodechon.com/">Julien Bodechon</a>,
           <a href="http://www.egotwister.com/guyom/index/">[guÿôm]</a>,
-          <a href="http//www.goto80.com">Goto80</a>
+          <a href="http://www.goto80.com">Goto80</a>
           <a href="http://festen.fr">Maryn</a>,
-          <a href="http/www.miniroc.com">Mini Roc</a>,
+          <a href="http://www.miniroc.com/">Mini Roc</a>,
           Momo Seb,
           <a href="http://valkiri.incongru.org">Valkiri</a>,
           <a href="http://www.mobyone.net">Mobyone</a>, 
@@ -820,7 +820,6 @@ Content:
           <a href="http://www.pocketmaster.ch/">Pocketmaster</a>,
           <a href="http://templevengeance.incongru.org/">Satanik Mike</a>,
           <a href="http://ww.myspace.com/sputnikbooster">Sputnik Booster</a>,
-          <a href="http://www.sidabitball.com/">Sidabitball</a>,
           <a href="http://www.sidabitball.com/">Sidabitball</a>,
           <a href="http://grogore.free.fr/"">Shoboshobo</a>,
           <a href="http://www.stereotype.ws/">Stereotype</a>,
