--- a/src/data/fixtures/fixtures.yml
+++ b/src/data/fixtures/fixtures.yml
@@ -881,7 +881,7 @@ Post:
       fr:
         title: D!HR est de retour !
         body: |
-         D!HR se met à l'heure d'été avec un nouveau site tout beau tout propre realisé par <a href="http://www.thibaulthuertas.com/">Thibault Huertas</a> en collaboration avec Constructions Incongrue . Nous remercions infiniement Nazilla qui avait réalisé la premiere version du site, vous pouvez voir ses nouvelles compositions sur son site <a href="http://www.nazilla.com">www.nazilla.com</a>.  C'est aussi l'occasion de vous présenter la 18ème release du label : Plan 9 des Robots Musiques ;  duo de Rob Droid et Puyo Puyo ! Cet album vous accompagnera parfaitement pendant votre visite du nouveau site. 
+         D!HR se met à l'heure d'été avec un nouveau site tout beau tout propre realisé par <a href="http://www.thibaulthuertas.com/">Thibault Huertas</a> en collaboration avec le bureau des Constructions Incongrues. Nous remercions infiniement Nazilla qui avait réalisé la premiere version du site, vous pouvez voir ses nouvelles compositions sur son site <a href="http://www.nazilla.com">www.nazilla.com</a>.  C'est aussi l'occasion de vous présenter la 18ème release du label : Plan 9 des Robots Musiques ;  duo de Rod Droïd et Puyo Puyo ! Cet album vous accompagnera parfaitement pendant votre visite du nouveau site. 
       en:
         title: D!HR is back !
         body: |
