--- a/src/data/fixtures/fixtures.yml
+++ b/src/data/fixtures/fixtures.yml
@@ -834,7 +834,7 @@ Content:
           The aim of this eclectic record company is to promote new artists and new types if music. D!HR is an outward-looking label, accessible to professional and amateur musicians alike, and to all types of listener, thanks to its policy of open and free culture and to the types of music it publishes.
           Its albums are distributed under a Creative Commons licence, encouraging sharing and reuse of the music.
           Now you can discover the musical universe of Da ! Heard It Records (Ben Et Bené, Xerak, Goto80, Mini Roc, Sidabitball, Sputnik Booster, Computer Truck, ...) on site
-          By subscribing to the rss feed or newsletter you will be kept informed of upcoming releases of Le Chien Violet,Aniaetleprogrammeur, etc.
+          By subscribing to the rss feed or newsletter you will be kept informed of upcoming releases.
         greetings: |
           <a href="http://www.myspace.com/astroboiler/">Astroboiler</a>,
           <a href="http://www.benetbene.net">Ben Et Béné</a>,
@@ -854,7 +854,7 @@ Content:
           <a href="http//www.goto80.com">Goto80</a>
           <a href="http://festen.fr">Maryn</a>,
           <a href="http/www.miniroc.com">Mini Roc</a>,
-          Momo Seb,
+          <a href="http://www.mixcloud.com/DjFulciSeleKtone/">Momo Seb</a>,
           <a href="http://valkiri.incongru.org">Valkiri</a>,
           <a href="http://www.mobyone.net">Mobyone</a>, 
           <a href="http://www.ilbm.info">Ilbm</a>,
