--- a/build.xml
+++ b/build.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project name="net.daheardit-records.www" default="help" basedir=".">
-	<import file="opt/ananas-build-toolkit/ant/toolkit.xml" />
-
-	<!-- This task can be used to override default profile loading behavior -->
-	<target name="setprofile" depends="toolkit.setprofile" />
+	<!-- Initialize toolkit -->
+	<import file="vendor/constructions-incongrues/ananas-build-toolkit/modules/toolkit/module.xml" />
 </project>
