--- a/etc/common/build.properties
+++ b/etc/common/build.properties
@@ -19,4 +19,4 @@ feeds.feedburner_enabled=0
 mkdir=src/log,src/cache
 
 # toolkit
-toolkit.modules=properties,git,composer,php,symfony1,filesystem
+toolkit.modules=properties,git,composer,php,symfony1,filesystem,rsync
