[abt] updated toolkit

--- a/etc/common/build.properties
+++ b/etc/common/build.properties
@@ -18,5 +18,17 @@ feeds.feedburner_enabled=0
 # mkdir
 mkdir=src/log,src/cache
 
+# php
+php.review.php-cs-fixer.additional_options=
+
+# remote
+remote.host=
+remote.path.root=
+remote.username=
+
+# rsync
+rsync.options=
+
 # toolkit
 toolkit.modules=properties,git,composer,php,symfony1,filesystem,rsync
+toolkit.modules.external=
