[config] changed database configuration directives names

--- a/etc/common/build.properties
+++ b/etc/common/build.properties
@@ -4,10 +4,10 @@
 chmod.777=src/log,src/cache
 
 # database
-database.www.host=
-database.www.name=
-database.www.password=
-database.www.username=
+database.main.hostname=
+database.main.name=
+database.main.password=
+database.main.username=
 
 # dhr
 dhr.url.root=
