[vagrant] configurable ip

--- a/etc/johan/build.properties
+++ b/etc/johan/build.properties
@@ -2,13 +2,15 @@
 
 # database
 database.main.hostname=localhost
-database.main.name=net_dhr_www
+database.main.name=main
 database.main.password=
 database.main.username=root
 
 # dhr
-dhr.url.root=http://localhost/constructions-incongrues/net.daheardit-records.www/frontend_dev.php
+dhr.url.root=http://192.168.33.2
 
 # feeds
 feeds.feedburner_enabled=0
 
+# vagrant
+vagrant.ip=192.168.33.2
