--- a/etc/common/build.properties
+++ b/etc/common/build.properties
@@ -29,6 +29,9 @@ remote.username=
 # rsync
 rsync.options=
 
+# vagrant
+vagrant.ip=
+
 # toolkit
 toolkit.modules=properties,git,composer,php,symfony1,filesystem,rsync
 toolkit.modules.external=
