[backend] release slug is no longer autogenerated

--- a/src/apps/backend/modules/release/config/generator.yml
+++ b/src/apps/backend/modules/release/config/generator.yml
@@ -20,6 +20,9 @@ generator:
         sku:
           label: sku
           help: La référence catalogue
+        slug:
+          label: slug
+          help: La référence catalogue
         released_at:
           label: Date de sortie
           help: La date de sortie officielle
