--- a/src/apps/backend/modules/release/config/generator.yml
+++ b/src/apps/backend/modules/release/config/generator.yml
@@ -32,6 +32,9 @@ generator:
         is_available:
           label: La release est-elle encore disponible ?
           help: Décocher cette case si la release est épuisée 
+        links_carousel:
+          label : Liens carousel
+          help: Un lien par ligne
       list:
         display: [=sku, title, artist, released_at]
       filter:  ~
