--- a/etc/johan/build.properties
+++ b/etc/johan/build.properties
@@ -2,12 +2,12 @@
 
 # database
 database.main.hostname=localhost
-database.main.name=main
+database.main.name=net_daheardit_www
 database.main.password=
 database.main.username=root
 
 # dhr
-dhr.url.root=http://192.168.33.2
+dhr.url.root=http://localhost/net.daheardit-records.net.www
 
 # feeds
 feeds.feedburner_enabled=0
