[configuration] Mise à jour du profil de configuration de production

--- a/etc/jeroboam/build.properties
+++ b/etc/jeroboam/build.properties
@@ -5,22 +5,22 @@
 # Uncomment directives to affect a specific value for this configuration profile.
 
 # chmod
-chmod.777=src/cache,src/log
+#chmod.777=src/cache,src/log
 
 # composer
 #composer.executable=composer.phar
 
 # database
-database.main.hostname=
-database.main.name=
-database.main.password=
-database.main.username=
+database.main.hostname=127.0.0.1
+database.main.name=admin_net_dhr_www
+database.main.password=rotwobEd6
+database.main.username=admin_dba_dhr
 
 # dhr
-dhr.url.root=
+dhr.url.root=http://www.daheardit-records.net
 
 # feeds
-feeds.feedburner_enabled=
+feeds.feedburner_enabled=true
 
 # git
 #git.branch=master
@@ -47,7 +47,7 @@ feeds.feedburner_enabled=
 #symfony1.version14=true
 
 # toolkit
-toolkit.modules=php,properties,filesystem,git,composer,symfony1
+#toolkit.modules=php,properties,filesystem,git,composer,symfony1
 
 # vagrant
-vagrant.ip=
+#vagrant.ip=
