--- a/etc/common/build.properties
+++ b/etc/common/build.properties
@@ -40,6 +40,14 @@ feeds.feedburner_enabled=
 #php.review.phpcs.additional_options=-n
 #php.review.phpcs.standard=PSR
 
+# remote
+#remote.host=
+#remote.path.root=
+#remote.username=
+
+# rsync
+#rsync.options=
+
 # symfony1
 #symfony1.cache.path=dirname(__FILE__).'/../cache'
 #symfony1.executable=src/symfony
@@ -47,7 +55,7 @@ feeds.feedburner_enabled=
 #symfony1.version14=true
 
 # toolkit
-toolkit.modules=php,properties,filesystem,git,composer,symfony1
+toolkit.modules=php,properties,filesystem,git,composer,symfony1,rsync2
 
 # vagrant
 vagrant.ip=
