--- a/etc/jeroboam/build.properties
+++ b/etc/jeroboam/build.properties
@@ -40,6 +40,14 @@ feeds.feedburner_enabled=true
 #php.review.phpcs.additional_options=-n
 #php.review.phpcs.standard=PSR
 
+# remote
+remote.host=jeroboam.pastis-hosting.net
+remote.path.root=/srv/bouteille_data/plesk-vhosts/daheardit-records.net/web_users/sources/next
+remote.username=net_daheardit
+
+# rsync
+#rsync.options=
+
 # symfony1
 #symfony1.cache.path=dirname(__FILE__).'/../cache'
 #symfony1.executable=src/symfony
@@ -47,7 +55,7 @@ feeds.feedburner_enabled=true
 #symfony1.version14=true
 
 # toolkit
-#toolkit.modules=php,properties,filesystem,git,composer,symfony1
+#toolkit.modules=php,properties,filesystem,git,composer,symfony1,rsync2
 
 # vagrant
 #vagrant.ip=
