[configuration] last updates

--- a/etc/common/build.properties
+++ b/etc/common/build.properties
@@ -46,7 +46,7 @@ feeds.feedburner_enabled=
 #remote.username=
 
 # rsync
-#rsync.options=
+rsync.options=--delete-after
 
 # symfony1
 #symfony1.cache.path=dirname(__FILE__).'/../cache'
