--- a/etc/jeroboam/build.properties
+++ b/etc/jeroboam/build.properties
@@ -46,7 +46,7 @@ remote.path.root=/srv/bouteille_data/plesk-vhosts/daheardit-records.net/web_user
 remote.username=net_daheardit
 
 # rsync
-#rsync.options=
+#rsync.options=--delete-after
 
 # symfony1
 #symfony1.cache.path=dirname(__FILE__).'/../cache'
