--- a/etc/jeroboam/build.properties
+++ b/etc/jeroboam/build.properties
@@ -27,6 +27,9 @@ feeds.feedburner_enabled=true
 #git.executable=/usr/bin/git
 #git.remote=origin
 
+# mkdir
+#mkdir=src/cache,src/log
+
 # php
 #php.executable=/usr/bin/php
 #php.ini.display_errors=true
