--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,6 @@
         }
     ],
     "require": {
-        "constructions-incongrues/ananas-build-toolkit": "dev-master"
+        "constructions-incongrues/ananas-build-toolkit": "0.12.0"
     }
 }
