--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
         }
     ],
     "require": {
-        "constructions-incongrues/ananas-build-toolkit": "0.12.0"
+        "constructions-incongrues/ananas-build-toolkit": "0.12.0",
+        "symfony/finder": "2.6.*"
     }
 }
