[vagrant] pas d'autoupdate des guest additions

--- a/etc/jeroboam/build.properties
+++ b/etc/jeroboam/build.properties
@@ -54,6 +54,7 @@ remote.username=net_daheardit
 # symfony1
 #symfony1.cache.path=dirname(__FILE__).'/../cache'
 #symfony1.executable=src/symfony
+#symfony1.log.path=dirname(__FILE__).'/../log'
 #symfony1.version12=false
 #symfony1.version14=true
 
